syntax = "proto3";

package svas.proto;

message Request {
  bool left_window_up = 1;
  bool left_window_down = 2;
  bool left_window_stop = 3;
  bool right_window_up = 4;
  bool right_window_down = 5;
  bool right_window_stop = 6;
  bool left_door_lock = 7;
  bool right_door_lock = 8;
  bool trunk_open = 9;
  bool hazard_on = 10;
  bool hazard_off = 11;
  bool popup_on = 12;
  bool popup_off = 13;
  bool horn_on = 14;
  bool horn_off = 15;
  bool horn_strobe = 16;
  bool ac_on = 17;
  bool ac_off = 18;
  bool fan_on = 19;
  bool fan_off = 20;
  bool accessory_on = 21;
  bool accessory_off = 22;
  bool ig1_on = 23;
  bool ig1_off = 24;
  bool ig2_on = 25;
  bool ig2_off = 26;
  bool start = 27;
  bool burst_data = 28;
}
